[gd_scene load_steps=5 format=3 uid="uid://bcjvo3oh735g3"]

[ext_resource type="Texture2D" uid="uid://djihu3p3ldtcf" path="res://images/grid.png" id="1_8xgqk"]
[ext_resource type="Script" path="res://scripts/help_menu.gd" id="1_78acb"]
[ext_resource type="FontFile" uid="uid://m4xfols7k78r" path="res://fonts/Glue Gun.otf" id="2_tff15"]
[ext_resource type="Theme" uid="uid://cabeo2527mijv" path="res://themes/button_theme.tres" id="3_0gkjb"]

[node name="help_menu2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_78acb")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(749.858, 451.413)
scale = Vector2(2.35, 2.51)
texture = ExtResource("1_8xgqk")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -78.0
offset_top = 24.0
offset_right = 78.0
offset_bottom = 132.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.105882, 0.376471, 0.772549, 1)
theme_override_fonts/font = ExtResource("2_tff15")
theme_override_font_sizes/font_size = 100
text = "Help - Game Modes"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -728.0
offset_top = -356.0
offset_right = 728.0
offset_bottom = 354.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.9, 1)
theme_override_constants/separation = 50

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.105882, 0.376471, 0.772549, 1)
theme_override_fonts/font = ExtResource("2_tff15")
theme_override_font_sizes/font_size = 60
text = "Normal"

[node name="Label2" type="Label" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.352941, 0.596078, 0.972549, 1)
theme_override_fonts/font = ExtResource("2_tff15")
theme_override_font_sizes/font_size = 40
text = "This mode contains a mini tutorial at the beginning, introducing you to all the enemies. Enemies then spawn in once every 5 seconds at random."
autowrap_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.105882, 0.376471, 0.772549, 1)
theme_override_fonts/font = ExtResource("2_tff15")
theme_override_font_sizes/font_size = 60
text = "Double Trouble"
autowrap_mode = 2

[node name="Label4" type="Label" parent="VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.352941, 0.596078, 0.972549, 1)
theme_override_fonts/font = ExtResource("2_tff15")
theme_override_font_sizes/font_size = 40
text = "No tutorial and double the enemy spawn rate, what fun!"
autowrap_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(0.105882, 0.376471, 0.772549, 1)
theme_override_fonts/font = ExtResource("2_tff15")
theme_override_font_sizes/font_size = 60
text = "HELL"
autowrap_mode = 2

[node name="Label4" type="Label" parent="VBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(0.352941, 0.596078, 0.972549, 1)
theme_override_fonts/font = ExtResource("2_tff15")
theme_override_font_sizes/font_size = 40
text = "No tutorial and QUADRUPLE the enemy spawn rate, you won't last very long!"
autowrap_mode = 2

[node name="VBoxContainer4" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer/VBoxContainer4"]
layout_mode = 2
theme_override_colors/font_color = Color(0.105882, 0.376471, 0.772549, 1)
theme_override_fonts/font = ExtResource("2_tff15")
theme_override_font_sizes/font_size = 60
text = "Laser Mania"
autowrap_mode = 2

[node name="Label4" type="Label" parent="VBoxContainer/VBoxContainer4"]
layout_mode = 2
theme_override_colors/font_color = Color(0.352941, 0.596078, 0.972549, 1)
theme_override_fonts/font = ExtResource("2_tff15")
theme_override_font_sizes/font_size = 40
text = "No tutorial and only lasers spawn in this mode. Dodging between the ever increasing number of lasers will be the ultimate test of skill!"
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -265.0
offset_top = -99.0
offset_right = 265.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 30

[node name="prevBtn" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(250, 90)
layout_mode = 2
theme = ExtResource("3_0gkjb")
text = "Prev Page"

[node name="mainMenuBtn" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(250, 90)
layout_mode = 2
theme = ExtResource("3_0gkjb")
text = "Main Menu"

[connection signal="pressed" from="HBoxContainer/prevBtn" to="." method="_on_prev_btn_pressed"]
[connection signal="pressed" from="HBoxContainer/mainMenuBtn" to="." method="_on_main_menu_btn_pressed"]
